frontend-v2/src/themes/alpha.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(0.9818 0.0054 95.0986);
  --foreground: oklch(0.1450 0 0);
  --card: oklch(0.9818 0.0054 95.0986);
  --card-foreground: #oklch(0.145 0 0);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.2671 0.0196 98.9390);
  --primary: oklch(0.7541 0.0853 67.1037);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(0.8924 0.0241 88.2431);
  --secondary-foreground: oklch(0.3720 0.0440 257.2870);
  --muted: oklch(0.9230 0.0030 48.7170);
  --muted-foreground: oklch(0.5530 0.0130 58.0710);
  --accent: oklch(0.9245 0.0138 92.9892);
  --accent-foreground: oklch(0.2333 0.0195 275.9526);
  --destructive: oklch(0.1908 0.0020 106.5859);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.8690 0.0050 56.3660);
  --input: oklch(0.9220 0 0);
  --ring: oklch(0.5540 0.0460 257.4170);
  --chart-1: oklch(0.8090 0.1050 251.8130);
  --chart-2: oklch(0.8110 0.1110 293.5710);
  --chart-3: oklch(0.8816 0.0276 93.1280);
  --chart-4: oklch(0.7040 0.0400 256.7880);
  --chart-5: oklch(0.5880 0.1580 241.9660);
  --sidebar: oklch(0.9663 0.0080 98.8792);
  --sidebar-foreground: oklch(0.2680 0.0070 34.2980);
  --sidebar-primary: oklch(0.5540 0.0460 257.4170);
  --sidebar-primary-foreground: oklch(0.9881 0 0);
  --sidebar-accent: oklch(0.9245 0.0138 92.9892);
  --sidebar-accent-foreground: oklch(0.3250 0 0);
  --sidebar-border: oklch(0.8690 0.0220 252.8940);
  --sidebar-ring: oklch(0.7040 0.0400 256.7880);
  --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
  --font-serif: Lora, ui-serif, serif;
  --font-mono: Fira Code, ui-monospace, monospace;
  --radius: 0.5rem;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 3px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.1;
  --shadow-color: oklch(0 0 0);
  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
  --tracking-normal: 0em;
  --spacing: 0.22rem;
}

.dark {
  --background: oklch(0.2679 0.0036 106.6427);
  --foreground: oklch(0.8074 0.0142 93.0137);
  --card: oklch(0.2679 0.0036 106.6427);
  --card-foreground: oklch(0.9818 0.0054 95.0986);
  --popover: oklch(0.3085 0.0035 106.6039);
  --popover-foreground: oklch(0.9211 0.0040 106.4781);
  --primary: oklch(0.7541 0.0853 67.1037);
  --primary-foreground: oklch(0.1450 0 0);
  --secondary: oklch(0.8728 0.0683 76.8804);
  --secondary-foreground: oklch(0.3085 0.0035 106.6039);
  --muted: oklch(0.2213 0.0038 106.7070);
  --muted-foreground: oklch(0.485 0.0115 99.0657);
  --accent: oklch(0.2130 0.0078 95.4245);
  --accent-foreground: oklch(0.9663 0.0080 98.8792);
  --destructive: oklch(0.5819 0.1501 25.7739);
  --destructive-foreground: oklch(1.0000 0 0);
  --success: oklch(0.5700 0.1100 128.0000);
  --success-foreground: oklch(1.0000 0 0);
  --border: oklch(0.174 0.0101 106.8928);
  --input: oklch(0.4336 0.0113 100.2195);
  --ring: oklch(0.7541 0.0853 67.1037);
  --chart-1: oklch(0.6088 0.1019 120.8246);
  --chart-2: oklch(0.5819 0.1501 25.7739);
  --chart-3: oklch(0.5540 0.0460 257.4170);
  --chart-4: oklch(0.9230 0.0030 48.7170);
  --chart-5: oklch(0.9560 0.0450 203.3880);
  --sidebar: oklch(0.2679 0.0036 106.6427);
  --sidebar-foreground: oklch(0.8074 0.0142 93.0137);
  --sidebar-primary: oklch(0.7541 0.0853 67.1037);
  --sidebar-primary-foreground: oklch(0.1450 0 0);
  --sidebar-accent: oklch(0.2130 0.0078 95.4245);
  --sidebar-accent-foreground: oklch(0.9663 0.0080 98.8792);
  --sidebar-border: oklch(0.174 0.0101 106.8928);
  --sidebar-ring: oklch(0.7541 0.0853 67.1037);
  --font-sans: Inter, ui-sans-serif, sans-serif, system-ui;
  --font-serif: Lora, ui-serif, serif;
  --font-mono: Fira Code, ui-monospace, monospace;
  --radius: 0.5rem;
  --shadow-x: 0;
  --shadow-y: 1px;
  --shadow-blur: 3px;
  --shadow-spread: 0px;
  --shadow-opacity: 0.4;
  --shadow-color: oklch(0 0 0);
  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.15);
  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.20);
  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.30), 0 1px 2px -1px hsl(0 0% 0% / 0.25);
  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.30), 0 1px 2px -1px hsl(0 0% 0% / 0.25);
  --shadow-md: 0 4px 6px -1px hsl(0 0% 0% / 0.40), 0 2px 4px -2px hsl(0 0% 0% / 0.30);
  --shadow-lg: 0 10px 15px -3px hsl(0 0% 0% / 0.40), 0 4px 6px -4px hsl(0 0% 0% / 0.30);
  --shadow-xl: 0 20px 25px -5px hsl(0 0% 0% / 0.40), 0 8px 10px -6px hsl(0 0% 0% / 0.30);
  --shadow-2xl: 0 25px 50px -12px hsl(0 0% 0% / 0.60);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-success: var(--success);
  --color-success-foreground: var(--success-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground;
  }
}

